src/CEGUI.Native/include/CEGUI/CEGUIWidgets.h

typedef struct CEGUI_C_ListboxItem_t* CEGUI_C_ListboxItem;
typedef enum CEGUI_C_MCLSelectionMode
{
    CEGUI_C_MCL_ROW_SINGLE = 0,
    CEGUI_C_MCL_ROW_MULTIPLE = 1,
    CEGUI_C_MCL_CELL_SINGLE = 2,
    CEGUI_C_MCL_CELL_MULTIPLE = 3,
    CEGUI_C_MCL_NOMINATED_COLUMN_SINGLE = 4,
    CEGUI_C_MCL_NOMINATED_COLUMN_MULTIPLE = 5,
    CEGUI_C_MCL_COLUMN_SINGLE = 6,
    CEGUI_C_MCL_COLUMN_MULTIPLE = 7,
    CEGUI_C_MCL_NOMINATED_ROW_SINGLE = 8,
    CEGUI_C_MCL_NOMINATED_ROW_MULTIPLE = 9
} CEGUI_C_MCLSelectionMode;
typedef enum CEGUI_C_ListSortDirection
{
    CEGUI_C_LIST_SORT_NONE = 0,
    CEGUI_C_LIST_SORT_ASCENDING = 1,
    CEGUI_C_LIST_SORT_DESCENDING = 2
} CEGUI_C_ListSortDirection;
typedef struct CEGUI_C_MCLGridRef
{
    uint32_t row;
    uint32_t column;
} CEGUI_C_MCLGridRef;
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_Listbox_GetFirstSelected(CEGUI_C_Window window, CEGUI_C_ListboxItem* out_item);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_Listbox_GetNextSelected(CEGUI_C_Window window, CEGUI_C_ListboxItem start_item, CEGUI_C_ListboxItem* out_item);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_Listbox_AddItem(CEGUI_C_Window window, CEGUI_C_ListboxItem item);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_Listbox_InsertItem(CEGUI_C_Window window, CEGUI_C_ListboxItem item, CEGUI_C_ListboxItem before_item);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_Listbox_RemoveItem(CEGUI_C_Window window, CEGUI_C_ListboxItem item);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_Listbox_SetItemSelected(CEGUI_C_Window window, CEGUI_C_ListboxItem item, CEGUI_C_Bool selected);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_Listbox_EnsureItemVisible(CEGUI_C_Window window, CEGUI_C_ListboxItem item);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_Combobox_GetItemCount(CEGUI_C_Window window, size_t* out_count);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_Combobox_GetItemAt(CEGUI_C_Window window, size_t index, CEGUI_C_ListboxItem* out_item);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_Combobox_GetSelectedItem(CEGUI_C_Window window, CEGUI_C_ListboxItem* out_item);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_Combobox_AddItem(CEGUI_C_Window window, CEGUI_C_ListboxItem item);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_Combobox_InsertItem(CEGUI_C_Window window, CEGUI_C_ListboxItem item, CEGUI_C_ListboxItem before_item);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_Combobox_RemoveItem(CEGUI_C_Window window, CEGUI_C_ListboxItem item);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_Combobox_SetItemSelected(CEGUI_C_Window window, CEGUI_C_ListboxItem item, CEGUI_C_Bool selected);
/* Standalone ListHeader column management. Returned segments are borrowed windows. */
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_ListHeader_GetColumnCount(CEGUI_C_Window window, uint32_t* out_count);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_ListHeader_GetSegmentAt(CEGUI_C_Window window, uint32_t column, CEGUI_C_Window* out_segment);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_ListHeader_GetSegmentByID(CEGUI_C_Window window, uint32_t id, CEGUI_C_Window* out_segment);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_ListHeader_GetColumnFromID(CEGUI_C_Window window, uint32_t id, uint32_t* out_column);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_ListHeader_GetColumnWidth(CEGUI_C_Window window, uint32_t column, CEGUI_C_UDim* out_width);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_ListHeader_AddColumn(CEGUI_C_Window window, const char* text_utf8, uint32_t id, CEGUI_C_UDim width);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_ListHeader_InsertColumn(CEGUI_C_Window window, const char* text_utf8, uint32_t id, CEGUI_C_UDim width, uint32_t position);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_ListHeader_RemoveColumn(CEGUI_C_Window window, uint32_t column);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_ListHeader_MoveColumn(CEGUI_C_Window window, uint32_t column, uint32_t position);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_ListHeader_GetSortColumn(CEGUI_C_Window window, uint32_t* out_column);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_ListHeader_SetSortColumn(CEGUI_C_Window window, uint32_t column);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_ListHeader_GetSortDirection(CEGUI_C_Window window, CEGUI_C_ListSortDirection* out_direction);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_ListHeader_SetSortDirection(CEGUI_C_Window window, CEGUI_C_ListSortDirection direction);
/* MultiColumnList. */
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_MultiColumnList_GetColumnCount(CEGUI_C_Window window, uint32_t* out_count);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_MultiColumnList_GetRowCount(CEGUI_C_Window window, uint32_t* out_count);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_MultiColumnList_AddColumn(CEGUI_C_Window window, const char* text_utf8, uint32_t column_id, CEGUI_C_UDim width);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_MultiColumnList_InsertColumn(CEGUI_C_Window window, const char* text_utf8, uint32_t column_id, CEGUI_C_UDim width, uint32_t position);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_MultiColumnList_RemoveColumn(CEGUI_C_Window window, uint32_t column_index);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_MultiColumnList_AddRow(CEGUI_C_Window window, uint32_t row_id, uint32_t* out_row_index);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_MultiColumnList_InsertRow(CEGUI_C_Window window, uint32_t row_index, uint32_t row_id, uint32_t* out_actual_index);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_MultiColumnList_RemoveRow(CEGUI_C_Window window, uint32_t row_index);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_MultiColumnList_SetItem(CEGUI_C_Window window, CEGUI_C_ListboxItem item, uint32_t column_id, uint32_t row_index);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_MultiColumnList_GetItem(CEGUI_C_Window window, CEGUI_C_MCLGridRef position, CEGUI_C_ListboxItem* out_item);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_MultiColumnList_GetSelectedCount(CEGUI_C_Window window, uint32_t* out_count);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_MultiColumnList_GetFirstSelected(CEGUI_C_Window window, CEGUI_C_ListboxItem* out_item);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_MultiColumnList_GetNextSelected(CEGUI_C_Window window, CEGUI_C_ListboxItem start_item, CEGUI_C_ListboxItem* out_item);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_MultiColumnList_SetItemSelected(CEGUI_C_Window window, CEGUI_C_ListboxItem item, CEGUI_C_Bool selected);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_MultiColumnList_EnsureItemVisible(CEGUI_C_Window window, CEGUI_C_ListboxItem item);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_MultiColumnList_GetSelectionMode(CEGUI_C_Window window, CEGUI_C_MCLSelectionMode* out_mode);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_MultiColumnList_SetSelectionMode(CEGUI_C_Window window, CEGUI_C_MCLSelectionMode mode);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_MultiColumnList_GetSortColumn(CEGUI_C_Window window, uint32_t* out_column);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_MultiColumnList_SetSortColumn(CEGUI_C_Window window, uint32_t column);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_MultiColumnList_GetSortDirection(CEGUI_C_Window window, CEGUI_C_ListSortDirection* out_direction);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_MultiColumnList_SetSortDirection(CEGUI_C_Window window, CEGUI_C_ListSortDirection direction);
/* ItemEntry / ItemListBase / ItemListbox use Window handles for their items. */
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_ItemListBase_GetItemCount(CEGUI_C_Window window, size_t* out_count);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_ItemListBase_GetItemAt(CEGUI_C_Window window, size_t index, CEGUI_C_Window* out_item);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_ItemListBase_AddItem(CEGUI_C_Window window, CEGUI_C_Window item);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_ItemListBase_InsertItem(CEGUI_C_Window window, CEGUI_C_Window item, CEGUI_C_Window before_item);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_ItemListBase_RemoveItem(CEGUI_C_Window window, CEGUI_C_Window item);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_ItemListbox_GetSelectedCount(CEGUI_C_Window window, size_t* out_count);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_ItemListbox_GetFirstSelected(CEGUI_C_Window window, size_t start_index, CEGUI_C_Window* out_item);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_ItemListbox_GetNextSelected(CEGUI_C_Window window, CEGUI_C_Window start_item, CEGUI_C_Window* out_item);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_ItemListbox_SelectRange(CEGUI_C_Window window, size_t first, size_t last);