managed/CEGUI.Managed/NativeMethods.cs


    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_Listbox_GetFirstSelected(IntPtr window, out IntPtr out_item);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_Listbox_GetNextSelected(
        IntPtr window,
        IntPtr start_item,
        out IntPtr out_item);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_Listbox_AddItem(IntPtr window, IntPtr item);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_Listbox_InsertItem(
        IntPtr window,
        IntPtr item,
        IntPtr before_item);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_Listbox_RemoveItem(IntPtr window, IntPtr item);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_Listbox_SetItemSelected(
        IntPtr window,
        IntPtr item,
        int selected);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_Listbox_EnsureItemVisible(IntPtr window, IntPtr item);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_Combobox_GetItemCount(IntPtr window, out UIntPtr out_count);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_Combobox_GetItemAt(
        IntPtr window,
        UIntPtr index,
        out IntPtr out_item);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_Combobox_GetSelectedItem(IntPtr window, out IntPtr out_item);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_Combobox_AddItem(IntPtr window, IntPtr item);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_Combobox_InsertItem(
        IntPtr window,
        IntPtr item,
        IntPtr before_item);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_Combobox_RemoveItem(IntPtr window, IntPtr item);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_Combobox_SetItemSelected(
        IntPtr window,
        IntPtr item,
        int selected);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_ListHeader_GetColumnCount(IntPtr window, out uint out_count);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_ListHeader_GetSegmentAt(
        IntPtr window,
        uint column,
        out IntPtr out_segment);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_ListHeader_GetSegmentByID(
        IntPtr window,
        uint id,
        out IntPtr out_segment);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_ListHeader_GetColumnFromID(
        IntPtr window,
        uint id,
        out uint out_column);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_ListHeader_GetColumnWidth(
        IntPtr window,
        uint column,
        out UDim out_width);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_ListHeader_AddColumn(
        IntPtr window,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string text_utf8,
        uint id,
        UDim width);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_ListHeader_InsertColumn(
        IntPtr window,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string text_utf8,
        uint id,
        UDim width,
        uint position);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_ListHeader_RemoveColumn(IntPtr window, uint column);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_ListHeader_MoveColumn(
        IntPtr window,
        uint column,
        uint position);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_ListHeader_GetSortColumn(IntPtr window, out uint out_column);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_ListHeader_SetSortColumn(IntPtr window, uint column);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_ListHeader_GetSortDirection(IntPtr window, out ListSortDirection out_direction);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_ListHeader_SetSortDirection(IntPtr window, ListSortDirection direction);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_MultiColumnList_GetColumnCount(IntPtr window, out uint out_count);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_MultiColumnList_GetRowCount(IntPtr window, out uint out_count);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_MultiColumnList_AddColumn(
        IntPtr window,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string text_utf8,
        uint column_id,
        UDim width);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_MultiColumnList_InsertColumn(
        IntPtr window,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string text_utf8,
        uint column_id,
        UDim width,
        uint position);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_MultiColumnList_RemoveColumn(IntPtr window, uint column_index);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_MultiColumnList_AddRow(
        IntPtr window,
        uint row_id,
        out uint out_row_index);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_MultiColumnList_InsertRow(
        IntPtr window,
        uint row_index,
        uint row_id,
        out uint out_actual_index);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_MultiColumnList_RemoveRow(IntPtr window, uint row_index);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_MultiColumnList_SetItem(
        IntPtr window,
        IntPtr item,
        uint column_id,
        uint row_index);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_MultiColumnList_GetItem(
        IntPtr window,
        MultiColumnGridReference position,
        out IntPtr out_item);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_MultiColumnList_GetSelectedCount(IntPtr window, out uint out_count);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_MultiColumnList_GetFirstSelected(IntPtr window, out IntPtr out_item);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_MultiColumnList_GetNextSelected(
        IntPtr window,
        IntPtr start_item,
        out IntPtr out_item);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_MultiColumnList_SetItemSelected(
        IntPtr window,
        IntPtr item,
        int selected);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_MultiColumnList_EnsureItemVisible(IntPtr window, IntPtr item);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_MultiColumnList_GetSelectionMode(IntPtr window, out MultiColumnSelectionMode out_mode);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_MultiColumnList_SetSelectionMode(IntPtr window, MultiColumnSelectionMode mode);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_MultiColumnList_GetSortColumn(IntPtr window, out uint out_column);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_MultiColumnList_SetSortColumn(IntPtr window, uint column);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_MultiColumnList_GetSortDirection(IntPtr window, out ListSortDirection out_direction);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_MultiColumnList_SetSortDirection(IntPtr window, ListSortDirection direction);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_ItemListBase_GetItemCount(IntPtr window, out UIntPtr out_count);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_ItemListBase_GetItemAt(
        IntPtr window,
        UIntPtr index,
        out IntPtr out_item);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_ItemListBase_AddItem(IntPtr window, IntPtr item);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_ItemListBase_InsertItem(
        IntPtr window,
        IntPtr item,
        IntPtr before_item);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_ItemListBase_RemoveItem(IntPtr window, IntPtr item);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_ItemListbox_GetSelectedCount(IntPtr window, out UIntPtr out_count);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_ItemListbox_GetFirstSelected(
        IntPtr window,
        UIntPtr start_index,
        out IntPtr out_item);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_ItemListbox_GetNextSelected(
        IntPtr window,
        IntPtr start_item,
        out IntPtr out_item);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_ItemListbox_SelectRange(
        IntPtr window,
        UIntPtr first,
        UIntPtr last);
